tests/lean/appParserIssue.lean.expected.out
f 1 : (Nat → Nat) → Nat
appParserIssue.lean:5:11: error: expected command
f 1 (λ (x : Nat), x) : Nat
f 1 (λ (x : Nat), x) : Nat
f 1 (λ (x : Nat), x) : Nat
f 1 (λ (x : Nat), x) : Nat
